--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -14,15 +14,15 @@
             android:icon="@drawable/ic_baseline_refresh_24"
             android:title="Refresh" />
         <item
-            android:visible="false"
             android:id="@+id/nav_show_calendar"
             android:icon="@drawable/ic_baseline_exit_to_app_24"
-            android:title="Change Date" />
+            android:title="Change Date"
+            android:visible="false" />
         <item
-            android:visible="true"
             android:id="@+id/nav_Menu"
             android:icon="@drawable/grid"
-            android:title="New Slider" />
+            android:title="New Slider"
+            android:visible="false" />
         <item
             android:id="@+id/route_menu"
             android:icon="@drawable/route"
